--- a/views/descubre.ejs
+++ b/views/descubre.ejs
@@ -56,8 +56,14 @@
                     </li>
                     <li>
                         <a href="/lideres">
-                            <i class="material-icons">group</i>
+                            <i class="material-icons">person</i>
                             <p>Líderes de opinión</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/partidos">
+                            <i class="material-icons">group</i>
+                            <p>Partidos políticos</p>
                         </a>
                     </li>
                     <li>
@@ -102,44 +108,6 @@
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
-                        <!--
-                            <li>
-                                <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="material-icons">dashboard</i>
-                                    <p class="hidden-lg hidden-md">Dashboard</p>
-                                </a>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="material-icons">notifications</i>
-                                    <span class="notification">5</span>
-                                    <p class="hidden-lg hidden-md">Notifications</p>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="#">Mike John responded to your email</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">You have 5 new tasks</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">You're now friend with Andrew</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Another Notification</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Another One</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="material-icons">person</i>
-                                    <p class="hidden-lg hidden-md">Profile</p>
-                                </a>
-                            </li>
-                        -->
                         </ul>
                     </div>
                 </div>
@@ -156,29 +124,19 @@
                             <ul id="dropdown" class="dropdown-menu">
                                 <li><a id="posts" href="#">Publicaciones</a></li>
                                 <li><a id="comments" href="#">Comentarios</a></li>
-                                <!--
-                                <li class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">One more separated link</a></li>
-                                -->
                             </ul>
                         </div>
+                        <div class="col-md-6 dropdown">
+                        </div>
                         <div class="col-md-3 dropdown">
-                            <a id="dropdown-title" href="#" class="btn-simple dropdown-toggle" data-toggle="dropdown">
-                                <!-- TODO: reemplazar por el primero en orden alfabetico (con ejs) -->
-                                Publicaciones
+                            <a href="#" class="btn btn-info dropdown-toggle pull-right" data-toggle="dropdown">
+                                <%= fechas[0] %>
                                 <b class="caret"></b>
                             </a>
-                            <ul id="dropdown" class="dropdown-menu">
-                                <li><a id="posts" href="#">Publicaciones</a></li>
-                                <li><a id="comments" href="#">Comentarios</a></li>
-                                <!--
-                                <li class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">One more separated link</a></li>
-                                -->
+                            <ul id="fecha" class="dropdown-menu pull-right">
+                                <% for (var i = 0; i < fechas.length; i++) { %>
+                                    <li><a href="#"><%= fechas[i] %></a></li>
+                                <% } %>
                             </ul>
                         </div>
                     </div>
@@ -265,12 +223,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.bundle.min.js"></script>
 <script src="/js/chartist.min.js"></script>
 <script src="/js/utils.js"></script>
-<script src="/js/sigma.min.js"></script>
-<script src="/js/sigma.parsers.json.min.js"></script>
-<script src="/js/sigma.plugins.animate.min.js"></script>
-<script src="/js/sigma.plugins.dragNodes.min.js"></script>
-<script src="/js/sigma.layout.forceAtlas2.min.js"></script>
-<script src="/js/sigma.layout.noverlap.min.js"></script>
 <!--  Dynamic Elements plugin -->
 <script src="/js/arrive.min.js"></script>
 <!--  PerfectScrollbar Library -->
@@ -283,7 +235,10 @@
 <script src="/js/demo.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
-        var today = new Date();
+        var date = new Date();
+        var type = "posts";
+        var year = date.getFullYear();
+        var month = date.getMonth();
         //console.log("month", );
         //console.log("year", );
         function getAssocs(type, year, month) {
@@ -337,14 +292,23 @@
             return color;
         }
 
-        getAssocs("posts", today.getFullYear(), (today.getMonth() + 1));
+        getAssocs("posts", year, month);
         
+        $("#fecha > li > a").on("click", function (evt) {
+            var selection = $(this).text();
+            var selectedDate = selection.split("/");
+            console.log("selectedDate");
+            month = selectedDate[0];
+            year = selectedDate[1];
+            getAssocs(type, year, month);
+        });
         $("#dropdown > li > a").on('click', function (evt) {
             var selection = $(this).text();
             $("#dropdown-title").text(selection + " ");
             $("#dropdown-title").append('<b class="caret"></b>');
-            var type = $(this).attr("id");
-            getAssocs(type, today.getFullYear(), (today.getMonth() + 1))
+            type = $(this).attr("id");
+            console.log("type", type);
+            getAssocs(type, year, month);
         });
 
         /*
@@ -367,7 +331,5 @@
         
 
 </script>
-<script type="text/javascript">
-    
-</script>
+<%- include('scripts/dropdown') %>
 </html>
