--- a/views/lideres.ejs
+++ b/views/lideres.ejs
@@ -44,8 +44,14 @@
                     </li>
                     <li class="active">
                         <a href="/lideres">
-                            <i class="material-icons">group</i>
+                            <i class="material-icons">person</i>
                             <p>Líderes de opinión</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/partidos">
+                            <i class="material-icons">group</i>
+                            <p>Partidos políticos</p>
                         </a>
                     </li>
                     <li>
@@ -86,7 +92,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <!-- TODO: cambiar titulo -->
-                        <a class="navbar-brand" href="#"> Material Dashboard </a>
+                        <a class="navbar-brand" href="#"> Sentinel </a>
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
@@ -493,12 +499,6 @@
                         <%- include('graphs/comments-sentiment', {
                             summary: summary
                         }) %>
-                        <!-- Line chart -->
-                        <!--
-                        <div class="col-lg-12">
-                            <canvas id="myChart" width="100%" height="400"></canvas>
-                        </div>
-                        -->
                     </div>
                     <div class="row">
                         <%- include('graphs/actividad', {
@@ -548,26 +548,6 @@
                 <div class="container-fluid">
                     <nav class="pull-left">
                         <ul>
-                            <li>
-                                <a href="#">
-                                    Home
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Company
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Portfolio
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Blog
-                                </a>
-                            </li>
                         </ul>
                     </nav>
                     <p class="copyright pull-right">
@@ -628,7 +608,8 @@
 }) %>
 <%- include('scripts/comments-sentiment.ejs', {
     summary: summary,
-    liderDefault: lideres[0].id
+    liderDefault: lideres[0].id,
+    entity: "lideres"
 }) %>
 <%- include('scripts/actividad', {
     casos: casos,
