--- a/views/partidos.ejs
+++ b/views/partidos.ejs
@@ -48,7 +48,7 @@
                             <p>Líderes de opinión</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="/partidos">
                             <i class="material-icons">group</i>
                             <p>Partidos políticos</p>
@@ -60,7 +60,7 @@
                             <p>Instituciones</p>
                         </a>
                     </li>
-                    <li class="active">
+                    <li>
                         <a href="/casos">
                             <i class="material-icons">gavel</i>
                             <p>Casos de corrupción</p>
@@ -96,44 +96,6 @@
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
-                        <!--
-                            <li>
-                                <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="material-icons">dashboard</i>
-                                    <p class="hidden-lg hidden-md">Dashboard</p>
-                                </a>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="material-icons">notifications</i>
-                                    <span class="notification">5</span>
-                                    <p class="hidden-lg hidden-md">Notifications</p>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="#">Mike John responded to your email</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">You have 5 new tasks</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">You're now friend with Andrew</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Another Notification</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Another One</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="material-icons">person</i>
-                                    <p class="hidden-lg hidden-md">Profile</p>
-                                </a>
-                            </li>
-                        -->
                         </ul>
                     </div>
                 </div>
@@ -144,18 +106,23 @@
                         <div class="col-md-3 dropdown">
                             <a id="dropdown-title" href="#" class="btn dropdown-toggle" data-toggle="dropdown">
                                 <!-- TODO: reemplazar por el primero en orden alfabetico (con ejs) -->
-                                Odebrecht
+                                <%= casos[0].partidos[0].friendly_name %>
                                 <b class="caret"></b>
                             </a>
                             <ul id="casos" class="dropdown-menu">
                                 <% if (casos.length > 0) { %>
-                                <% casos[0].casos.forEach(function (caso) { %>
+                                <% casos[0].partidos.forEach(function (caso) { %>
                                     <li><a id="<%= caso.short_name %>" href="#"><%= caso.friendly_name %></a></li>
                                 <% }) %>
                                 <% } %>
                             </ul>
                         </div>
 
+                    </div>
+                    <div class="row">
+                        <%- include('graphs/comments-sentiment', {
+                            summary: summary
+                        }) %>
                     </div>
                     <div class="row">
                         <%- include('graphs/actividad', {
@@ -215,15 +182,20 @@
 </script>
 <%- include('scripts/actividad', {
     casos: casos,
-    entity: "casos",
-    displayDefault: "odebrecht"
+    entity: "partidos",
+    displayDefault: casos[0].partidos[0].short_name
 }) %>
 <%- include('scripts/reactions', {
     casos: casos,
-    entity: "casos",
-    displayDefault: "odebrecht"
+    entity: "partidos",
+    displayDefault: casos[0].partidos[0].short_name
 }) %>
 <%- include('scripts/dropdown', {
     casos: casos
+}) %>
+<%- include('scripts/comments-sentiment.ejs', {
+    summary: summary,
+    liderDefault: casos[0].partidos[0].short_name,
+    entity: "partidos"
 }) %>
 </html>
