Disable comments corrupcion temporarily; like count now client side

--- a/views/scripts/comments-sentiment.ejs
+++ b/views/scripts/comments-sentiment.ejs
@@ -136,7 +136,8 @@
         }
 
         function initialize() {
-            getCommentsLiderCorrupcion(liderDefault);
+            // TODO: uncomment
+            //getCommentsLiderCorrupcion(liderDefault);
         }
 
         initialize();
@@ -228,7 +229,8 @@
                 $("#top-comments").html(replaceStr);
             }); // $.get
 
-            getCommentsLiderCorrupcion(entity);
+            // TODO: uncomment
+            //getCommentsLiderCorrupcion(entity);
 
         });
 
