--- a/views/scripts/count-likes.ejs
+++ b/views/scripts/count-likes.ejs
@@ -49,7 +49,8 @@
 		}
 
 	    if (hasPage) {
-	    	animateCount('count-likes', numberLikes);
+	    	//animateCount('count-likes', numberLikes);
+	    	getStats(pageId);
 	    	getReactions(pageId);
 	    }
 		//animateCount('count-likes')
