Only october, fix corrupcion footer lideres

--- a/views/scripts/count-corrupcion.ejs
+++ b/views/scripts/count-corrupcion.ejs
@@ -80,6 +80,8 @@
         		if ($("#subtitle-word-cloud").is(":visible")) {
         			$("#word-cloud").attr("src", "");
         			$("#subtitle-word-cloud").toggle();
+        			$("#describe-outlier-corrupcion").html("");
+        			$("#corrupcion-footer").toggle();
 		        }
 	        }
 	    });
