--- a/views/descubre.ejs
+++ b/views/descubre.ejs
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-icon.png" />
-    <!-- TODO: cambiar favicon -->
-    <link rel="icon" type="image/png" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png" />
+    <link rel="icon" type="image/png" href="../assets/img/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Sentinel</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
@@ -20,29 +19,24 @@
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
     <style type="text/css">
-      #graph {
-        width: 100%;
-        height: 700px;
-        margin: 0px;
-      }
-      .nopadding {
-        padding-left: 0 !important;
-        padding-right: 0 !important;
-      }
+        #graph {
+            width: 100%;
+            height: 1000px;
+        }
     </style>
-    <link href="/css/vis.min.css" rel="stylesheet"/>
+    <!--<link href="/css/vis.min.css" rel="stylesheet"/>-->
 </head>
 
 <body>
     <div class="wrapper">
-        <div class="sidebar" data-color="purple" data-image="/img/sidebar-1.jpg">
+        <div class="sidebar" data-color="purple" data-image="../assets/img/sidebar-1.jpg">
             <!--
         Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
 
         Tip 2: you can also add an image using data-image tag
     -->
             <div class="logo">
-                <a href="#" class="simple-text">
+                <a href="/" class="simple-text">
                     Sentinel
                 </a>
             </div>
@@ -103,7 +97,6 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <!-- TODO: cambiar titulo -->
                         <a class="navbar-brand" href="#"> Sentinel </a>
                     </div>
                     <div class="collapse navbar-collapse">
@@ -140,35 +133,10 @@
                             </ul>
                         </div>
                     </div>
-                    <div id="graph-container" class="row nopadding">
-                        <!--
-                        <div class="checkbox">
-                            <label style="color: #ff6600">
-                                <input id="casos" type="checkbox" checked>
-                                Casos de corrupción
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label style="color: #ec5148">
-                                <input id="palabras" type="checkbox" checked>
-                                Palabras asociadas a corrupción
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label style="color: #009933">
-                                <input id="lideres" type="checkbox" checked>
-                                Líderes de opinión
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label style="color: #666699">
-                                <input id="partidos" type="checkbox" checked>
-                                Partidos políticos
-                            </label>
-                        </div>
-                        -->
-                        <!-- Line chart -->
-                        <div id="graph">
+                    <div id="graph-container" class="row">
+                        <div class="col-md-12">
+                            <div id="graph">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -177,28 +145,6 @@
                 <div class="container-fluid">
                     <nav class="pull-left">
                         <ul>
-                        <!--
-                            <li>
-                                <a href="#">
-                                    Home
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Company
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Portfolio
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Blog
-                                </a>
-                            </li>
-                        -->
                         </ul>
                     </nav>
                     <p class="copyright pull-right">
@@ -217,16 +163,13 @@
 <script src="/js/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="/js/material.min.js" type="text/javascript"></script>
-<!-- Vis.js plugin-->
-<script src="/js/vis.min.js"></script>
 <!--  Charts Plugin -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.bundle.min.js"></script>
+<script src="/js/vis.min.js"></script>
 <script src="/js/chartist.min.js"></script>
-<script src="/js/utils.js"></script>
 <!--  Dynamic Elements plugin -->
 <script src="/js/arrive.min.js"></script>
 <!--  PerfectScrollbar Library -->
-<script src="/js/perfect-scrollbar.jquery.min.js"></script>
+<!--<script src="/js/perfect-scrollbar.jquery.min.js"></script>-->
 <!--  Notifications Plugin    -->
 <script src="/js/bootstrap-notify.js"></script>
 <!-- Material Dashboard javascript methods -->
@@ -251,6 +194,9 @@
                     edges: edges
                 };*/
                 var options = {
+                    autoResize: true,
+                    height: '100%',
+                    width: '100%',
                     nodes: {
                         shape: 'dot',
                         size: 30,
