--- a/views/descubre.ejs
+++ b/views/descubre.ejs
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png" />
-    <link rel="icon" type="image/png" href="../assets/img/favicon.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/apple-icon.png" />
+    <link rel="icon" type="image/png" href="/assets/img/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Sentinel</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
@@ -14,15 +14,27 @@
     <!--  Material Dashboard CSS    -->
     <link href="/css/material-dashboard.css?v=1.2.0" rel="stylesheet" />
     <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <link href="/css/demo.css" rel="stylesheet" />
+    <!--<link href="/css/demo.css" rel="stylesheet" />-->
     <!--     Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
     <style type="text/css">
         #graph {
             width: 100%;
-            height: 1000px;
+            min-height: 100%;
+            height: 600px;
         }
+
+        /*.fill {
+            min-height: 100%;
+            height: 100%;
+        }
+
+        html, body {
+            width: 100%;
+            height: 100%;
+            min-height: 100%;
+        }*/
     </style>
     <!--<link href="/css/vis.min.css" rel="stylesheet"/>-->
 </head>
@@ -106,7 +118,7 @@
                 </div>
             </nav>
             <div class="content">
-                <div class="container-fluid">
+                <div class="container-fluid fill">
                     <div class="row">
                         <div class="col-md-3 dropdown">
                             <a id="dropdown-title" href="#" class="btn dropdown-toggle" data-toggle="dropdown">
@@ -139,7 +151,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                    <div class="row">
+                        Hello, world
+                    </div>
+                </div> <!-- Container fluid -->
             </div>
             <footer class="footer">
                 <div class="container-fluid">
@@ -165,23 +180,21 @@
 <script src="/js/material.min.js" type="text/javascript"></script>
 <!--  Charts Plugin -->
 <script src="/js/vis.min.js"></script>
-<script src="/js/chartist.min.js"></script>
 <!--  Dynamic Elements plugin -->
 <script src="/js/arrive.min.js"></script>
 <!--  PerfectScrollbar Library -->
-<!--<script src="/js/perfect-scrollbar.jquery.min.js"></script>-->
-<!--  Notifications Plugin    -->
-<script src="/js/bootstrap-notify.js"></script>
+<script src="/js/perfect-scrollbar.jquery.min.js"></script>
 <!-- Material Dashboard javascript methods -->
 <script src="/js/material-dashboard.js?v=1.2.0"></script>
 <!-- Material Dashboard DEMO methods, don't include it in your project! -->
-<script src="/js/demo.js"></script>
+<!--<script src="/js/demo.js"></script>-->
 <script type="text/javascript">
     $(document).ready(function() {
         var date = new Date();
         var type = "posts";
         var year = date.getFullYear();
-        var month = date.getMonth();
+        // TODO: cambiar a date.getMonth()
+        var month = 10;
         //console.log("month", );
         //console.log("year", );
         function getAssocs(type, year, month) {
@@ -194,9 +207,9 @@
                     edges: edges
                 };*/
                 var options = {
-                    autoResize: true,
+                    /*autoResize: true,
                     height: '100%',
-                    width: '100%',
+                    width: '100%',*/
                     nodes: {
                         shape: 'dot',
                         size: 30,
