--- a/views/descubre.ejs
+++ b/views/descubre.ejs
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/apple-icon.png" />
-    <link rel="icon" type="image/png" href="/assets/img/favicon.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-icon.png" />
+    <link rel="icon" type="image/png" href="/favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Sentinel</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
@@ -14,7 +14,7 @@
     <!--  Material Dashboard CSS    -->
     <link href="/css/material-dashboard.css?v=1.2.0" rel="stylesheet" />
     <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <!--<link href="/css/demo.css" rel="stylesheet" />-->
+    <link href="/css/demo.css" rel="stylesheet" />
     <!--     Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
@@ -41,7 +41,7 @@
 
 <body>
     <div class="wrapper">
-        <div class="sidebar" data-color="purple" data-image="../assets/img/sidebar-1.jpg">
+        <div class="sidebar" data-color="orange" data-image="/img/sidebar-1.jpg">
             <!--
         Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
 
@@ -98,6 +98,7 @@
                     </li>
                 </ul>
             </div>
+        <!--</div>-->
         </div>
         <div class="main-panel">
             <nav class="navbar navbar-transparent navbar-absolute">
@@ -151,8 +152,34 @@
                             </div>
                         </div>
                     </div>
+                    <br>
                     <div class="row">
-                        Hello, world
+                        <b>¿Cómo interpretar el grafo?</b>
+                        <p>
+                            El color de los nodos (círculos) indica el tipo de entidad o el concepto al que hace referencia. El código de colores es el siguiente:
+                            <ul>
+                                <li><b><span style="color: #ec5148">Palabras alusivas a corrupción</span></b></li>
+                                <li><b><span style="color: #009933">Líderes de opinión</span></b></li>
+                                <li><b><span style="color: #FFFE4F">Partidos políticos</span></b></li>
+                                <li><b><span style="color: #E91E63">Casos de corrupción</span></b></li>
+                                <li><b><span style="color: #cc00cc">Instituciones</span></b></li>
+                            </ul>
+                            En <b><span style="color: #2b7ce9">azul</span></b> se muestran las palabras asociadas a los conceptos/entidades anteriormente mencionados.
+                        </p>
+                        <br>
+                        <b>¿Qué diferencia hay entre escoger publicaciones o comentarios?</b>
+                        <p>
+                            <ul>
+                                <li>El grafo para <b>publicaciones</b> indica cuáles son los temas y palabras más asociadas en <b>noticias</b> de las diferentes entidades y conceptos de corrupción (ver código de colores más arriba).</li>
+                                <li>El grafo para <b>comentarios</b> indica cuáles son los temas y palabras más asociadas en <b>comentarios</b> de usuarios de Facebook sobre las diferentes entidades y conceptos de corrupción.</li>
+                            </ul>
+                        </p>
+                        <br>
+                        <b>¿Qué indica el tamaño de los nodos?</b>
+                        <p>
+                            Entre mayor sea el tamaño del nodo, indica que existe una asociación más fuerte entre las palabras.
+                            Entre menor es el tamaño del nodo, la asociación entre las palabras es más débil (no se suelen mencionar en conjunto tan seguido).
+                        </p>
                     </div>
                 </div> <!-- Container fluid -->
             </div>
