--- a/views/instituciones.ejs
+++ b/views/instituciones.ejs
@@ -4,7 +4,6 @@
 <head>
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-icon.png" />
-    <!-- TODO: cambiar favicon -->
     <link rel="icon" type="image/png" href="/favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Sentinel</title>
@@ -23,7 +22,7 @@
 
 <body>
     <div class="wrapper">
-        <div class="sidebar" data-color="purple" data-image="/img/sidebar-1.jpg">
+        <div class="sidebar" data-color="orange" data-image="/img/sidebar-1.jpg">
             <!--
         Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
 
