--- a/views/medios.ejs
+++ b/views/medios.ejs
@@ -23,7 +23,7 @@
 
 <body>
     <div class="wrapper">
-        <div class="sidebar" data-color="purple" data-image="/img/sidebar-1.jpg">
+        <div class="sidebar" data-color="orange" data-image="/img/sidebar-1.jpg">
             <!--
         Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
 
