Update description sesgo

--- a/views/mediostodo.ejs
+++ b/views/mediostodo.ejs
@@ -257,7 +257,7 @@
                             Medios que publican considerablemente <b>más</b> sobre este líder de opinón: <span id="outliers-large-lideres"></span>
                         </div>
                         <div class="col-lg-6">
-                            Medios que publican considerablemente <b>más</b> sobre corrupción de este líder de opinón: <span id="outliers-large-lideres-corrupcion"></span>
+                            Medios que publican considerablemente <b>más</b> noticias de corrupción que mencionan a este líder de opinón: <span id="outliers-large-lideres-corrupcion"></span>
                         </div>
                     </div>
                     <div class="row">
@@ -265,7 +265,7 @@
                             Medios que publican considerablemente <b>menos</b> sobre este líder de opinón: <span id="outliers-small-lideres"></span>
                         </div>
                         <div class="col-lg-6">
-                            Medios que publican considerablemente <b>menos</b> sobre corrupción de este líder de opinón: <span id="outliers-small-lideres-corrupcion"></span>
+                            Medios que publican considerablemente <b>menos</b> noticias de corrupción que mencionan a este líder de opinón: <span id="outliers-small-lideres-corrupcion"></span>
                         </div>
                     </div>
                     <div class="row">
@@ -305,7 +305,7 @@
                             Medios que publican considerablemente <b>más</b> sobre este partido político: <span id="outliers-large-partidos"></span>
                         </div>
                         <div class="col-lg-6">
-                            Medios que publican considerablemente <b>más</b> sobre corrupción en este partido político: <span id="outliers-large-partidos-corrupcion"></span>
+                            Medios que publican considerablemente <b>más</b> noticias de corrupción que mencionan a este partido político: <span id="outliers-large-partidos-corrupcion"></span>
                         </div>
                     </div>
                     <div class="row">
@@ -313,7 +313,7 @@
                             Medios que publican considerablemente <b>menos</b> sobre este partido político: <span id="outliers-small-partidos"></span>
                         </div>
                         <div class="col-lg-6">
-                            Medios que publican considerablemente <b>menos</b> sobre corrupción en este partido político: <span id="outliers-small-partidos-corrupcion"></span>
+                            Medios que publican considerablemente <b>menos</b> noticias de corrupción que mencionan a este partido político: <span id="outliers-small-partidos-corrupcion"></span>
                         </div>
                     </div>
                     <div class="row">
@@ -353,7 +353,7 @@
                             Medios que publican considerablemente <b>más</b> sobre esta institución: <span id="outliers-large-instituciones"></span>
                         </div>
                         <div class="col-lg-6">
-                            Medios que publican considerablemente <b>más</b> sobre corrupción en esta institución: <span id="outliers-large-instituciones-corrupcion"></span>
+                            Medios que publican considerablemente <b>más</b> noticias de corrupción que mencionan a esta institución: <span id="outliers-large-instituciones-corrupcion"></span>
                         </div>
                     </div>
                     <div class="row">
@@ -361,7 +361,7 @@
                             Medios que publican considerablemente <b>menos</b> sobre esta institución: <span id="outliers-small-instituciones"></span>
                         </div>
                         <div class="col-lg-6">
-                            Medios que publican considerablemente <b>menos</b> sobre corrupción en esta institución: <span id="outliers-small-instituciones-corrupcion"></span>
+                            Medios que publican considerablemente <b>menos</b> noticias de corrupción que mencionan a esta institución: <span id="outliers-small-instituciones-corrupcion"></span>
                         </div>
                     </div>
                 </div>
