--- a/views/scripts/medios.ejs
+++ b/views/scripts/medios.ejs
@@ -92,20 +92,20 @@
                     $(counterDescriptionId).html("<i></i>");
                 }
                 else if (outlier == "small") {
-                    $(counterDescriptionId).html("<i>Este medio publica sobre este lider de opinión considerablemente menos comparado al resto</i>");
+                    $(counterDescriptionId).html("<i>Este medio publica sobre este líder de opinión considerablemente menos comparado al resto</i>");
                 }
                 else if (outlier == "large") {
-                    $(counterDescriptionId).html("<i>Este medio publica sobre este lider de opinión considerablemente más comparado al resto</i>");
+                    $(counterDescriptionId).html("<i>Este medio publica sobre este líder de opinión considerablemente más comparado al resto</i>");
                 }
 
                 if (outlierCorrupcion == "normal") {
                     $(counterDescriptionCorrupcionId).html("<i></i>");
                 }
                 else if (outlier == "small") {
-                    $(counterDescriptionCorrupcionId).html("<i>Este medio publica sobre corrupción de este lider de opinión considerablemente menos comparado al resto</i>");
+                    $(counterDescriptionCorrupcionId).html("<i>Este medio publica noticias de corrupción que mencionan a este líder de opinión considerablemente menos comparado al resto</i>");
                 }
                 else if (outlier == "large") {
-                    $(counterDescriptionCorrupcionId).html("<i>Este medio publica sobre corrupción de este lider de opinión considerablemente más comparado al resto</i>");
+                    $(counterDescriptionCorrupcionId).html("<i>Este medio publica noticias de corrupción que mencionan a este líder de opinión considerablemente más comparado al resto</i>");
                 }
             }
             else if (aspect == "partidos") {
@@ -130,10 +130,10 @@
                     $(counterDescriptionCorrupcionId).html("<i></i>");
                 }
                 else if (outlier == "small") {
-                    $(counterDescriptionCorrupcionId).html("<i>Este medio publica sobre corrupción en este partido político considerablemente menos comparado al resto</i>");
+                    $(counterDescriptionCorrupcionId).html("<i>Este medio publica noticias de corrupción que mencionan a este partido político considerablemente menos comparado al resto</i>");
                 }
                 else if (outlier == "large") {
-                    $(counterDescriptionCorrupcionId).html("<i>Este medio publica sobre corrupción en este partido político considerablemente más comparado al resto</i>");
+                    $(counterDescriptionCorrupcionId).html("<i>Este medio publica noticias de corrupción que mencionan a este partido político considerablemente más comparado al resto</i>");
                 }
             }
             else if (aspect == "instituciones") {
@@ -158,10 +158,10 @@
                     $(counterDescriptionCorrupcionId).html("<i></i>");
                 }
                 else if (outlier == "small") {
-                    $(counterDescriptionCorrupcionId).html("<i>Este medio publica sobre corrupción en esta institución considerablemente menos comparado al resto</i>");
+                    $(counterDescriptionCorrupcionId).html("<i>Este medio publica noticias de corrupción que mencionan a esta institución considerablemente menos comparado al resto</i>");
                 }
                 else if (outlier == "large") {
-                    $(counterDescriptionCorrupcionId).html("<i>Este medio publica sobre corrupción en esta institución considerablemente más comparado al resto</i>");
+                    $(counterDescriptionCorrupcionId).html("<i>Este medio publica noticias de corrupción que mencionan a esta institución considerablemente más comparado al resto</i>");
                 }
             }
 
